; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_gl.c_gl2_get_flags.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_gl.c_gl2_get_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GFX_CTX_FLAGS_HARD_SYNC = common dso_local global i32 0, align 4
@GFX_CTX_FLAGS_BLACK_FRAME_INSERTION = common dso_local global i32 0, align 4
@GFX_CTX_FLAGS_MENU_FRAME_FILTERING = common dso_local global i32 0, align 4
@GFX_CTX_FLAGS_SCREENSHOTS_SUPPORTED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @gl2_get_flags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gl2_get_flags(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @GFX_CTX_FLAGS_HARD_SYNC, align 4
  %6 = call i32 @BIT32_SET(i32 %4, i32 %5)
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @GFX_CTX_FLAGS_BLACK_FRAME_INSERTION, align 4
  %9 = call i32 @BIT32_SET(i32 %7, i32 %8)
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @GFX_CTX_FLAGS_MENU_FRAME_FILTERING, align 4
  %12 = call i32 @BIT32_SET(i32 %10, i32 %11)
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @GFX_CTX_FLAGS_SCREENSHOTS_SUPPORTED, align 4
  %15 = call i32 @BIT32_SET(i32 %13, i32 %14)
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @BIT32_SET(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
